ghost/admin/app/styles/layouts/post-preview.css
.gh-post-preview-header {
    position: sticky;
    top: 0;
    left: 0;
    right: 0;
    z-index: 9999;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 72px;
    overflow: hidden;
    margin: 0;
    padding: 18px 32px 16px;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    background: var(--white);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.gh-post-preview-header h2 {
    flex: 1;
    margin: 0;
    margin-right: auto;
}

.gh-post-preview-header-border {
    border-bottom: 1px solid var(--whitegrey);
}

.gh-post-preview-btn-group {
    display: flex;
    flex-grow: 1;
    justify-content: center;
}

.gh-post-preview-btn-group button {
    width: 64px;
}

.gh-post-preview-btn-group .gh-btn-group span {
    height: 36px;
    line-height: 34px;
    border-radius: 3px;
}

.gh-post-preview-mode svg {
    max-height: 20px;
    max-width: 20px;
    vertical-align: middle;
    fill: var(--midgrey);
}

.gh-btn-external {
    margin-left: 2rem;
}

.gh-btn-external svg {
    width: 12px;
    fill: var(--darkgrey);
}

.gh-btn-external svg path {
    stroke: none;
}

/* Browser preview */
.gh-post-preview-browser-container {
    position: relative;
    display: flex;
    flex-grow: 1;
    overflow: auto;
    margin: 0;
    background: var(--whitegrey-l1);
}

.gh-post-preview-browser-container iframe {
    width: 100%;
    /* height: 100%; */
    border: none;
}

.gh-post-preview-url-container {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 38px;
    max-width: 520px;
    padding: 5px 4px 5px 8px;
    color: var(--midgrey);
    font-size: 1.4rem;
    border: 1px solid var(--whitegrey);
    background: var(--whitegrey-l2);
    border-radius: 4px;
}

.gh-post-preview-copy {
    position: absolute;
    top: 2px;
    right: 2px;
    display: flex;
    align-items: center;
    height: 32px;
    padding: 0 8px 0 9px;
}

.gh-post-preview-copy span {
    margin-top: -2px;
}

.gh-post-preview-browser-footer,
.gh-post-preview-email-footer {
    display: flex;
    justify-content: center;
    align-items: center;
    border-top: 1px solid var(--whitegrey);
    padding: 2.8rem 2rem;
}


/* Mobile preview */
.gh-post-preview-iframe {
    transform: scale(0.8);
    transform-origin: 0 0;
    width: 361px;
    height: 786px;
    padding: 0;
    border: 0;
}

.gh-post-preview-iframe .left-col {
    display: none;
}


/* Email preview */
.gh-post-preview-email-container {
    position: relative;
    height: calc(100vh - 135px);
    display: flex;
    flex-direction: column;
    align-items: center;
    background: var(--whitegrey-l1);
    padding: 30px 30px 40px;
    overflow: auto;
}

.gh-post-preview-email-mockup {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    overflow: hidden;
    max-width: 740px;
    width: 100%;
    padding: 0;
    background: var(--white);
    box-shadow:
        0 0 0 1px rgba(0,0,0,0.02),
        0 2.8px 2.2px rgba(0, 0, 0, 0.02),
        0 6.7px 5.3px rgba(0, 0, 0, 0.028),
        0 12.5px 10px rgba(0, 0, 0, 0.035),
        0 22.3px 17.9px rgba(0, 0, 0, 0.042),
        0 41.8px 33.4px rgba(0, 0, 0, 0.05),
        0 100px 80px rgba(0, 0, 0, 0.07);
    ;
    border-radius: 3px;
}

.gh-post-preview-email-container iframe {
    flex-grow: 1;
    border: none;
    width: 100%;
}

.gh-post-preview-email-input {
    width: 100%;
    max-width: 280px;
}

.gh-post-preview-email-input {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.gh-post-preview-email-trigger,
.gh-post-preview-copy-url-trigger {
    height: 38px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.gh-post-preview-email-trigger span {
    padding: 0 20px;
}

/* Social preview */
.gh-post-preview-social-container {
    position: relative;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    padding: 3.2rem;
    overflow-y: scroll;
    background: var(--whitegrey-l1);
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
}

.gh-post-preview-social-container:after {
    content: "";
    display: block;
    width: 100%;
    height: 2.4rem;
  }

  .gh-post-preview-social-container p {
      width: 100%;
      text-align: center;
  }

@media (max-width: 1120px) {
    .gh-social-container-responsive {
        flex-direction: column;
        align-items: center;
    }
}

.social-icon {
    width: 40px;
    height: 40px;
    margin-right: 8px;
}

.gh-social-og-container {
    width: 476px;
    margin-bottom: 2.4rem;
    border: 1px solid #e5e5e5;
    background: #fff;
    border-radius: 3px;
}

@media (min-width: 1120px) {
    .gh-social-og-container {
        margin-right: 1.2rem;
    }
}

.gh-social-og-title {
    color: #385898;
    font-size: 14;
    line-height: 1.38;
    font-weight: 600;
}

.gh-social-og-time {
    color: #616770;
    font-size: 12px;
    line-height: 1.34;
    font-weight: 400;
}

.gh-social-og-desc {
    display: inline-block;
    height: 10px;
    background: #E9EBEE;
    border-radius: 5px;
}

.gh-social-og-preview {
    background: #f2f3f5;
}

.gh-social-og-preview.no-container {
    border-left: 1px solid #dddfe2;
    border-right: 1px solid #dddfe2;
}

.gh-social-og-preview-image {
    width: 100%;
    height: 247px;
    border-top: 1px solid #dddfe2;
    background-size: cover;
    background-position: center center;
}

.gh-social-og-preview-img-add {
    width: 100%;
    padding: .6rem 0;
    color: var(--green-d1);
    font-weight: 500;
    letter-spacing: 0.2px;
    border: 1px dashed var(--lightgrey-d1);
}

.gh-social-og-preview-bookmark {
    padding: 10px 12px 8px;
    border-bottom: 1px solid #dddfe2;
}

.gh-social-og-preview-content {
    height: 69px;
    overflow: hidden;
    margin: 0 -1px 0 -4px;
    padding: 0 1px 0 4px;
}
/* ... */

